# College-DS-Assignments

./: .gitignore  CMakeLists.txt  README.md
api/include/: Api.h  BinaryNode.h  BinaryNodeStatus.h  BinaryNodeTemplate.h  BinaryNodeUtils.h  MakeStack.h  Node.h  SinglyLinkedNode.h  SinglyLinkedNodeStatus.h  SinglyLinkedNodeTemplate.h  SinglyLinkedNodeUtils.h  Stack.h  StackStatus.h  StackTemplate.h  StackUtils.h
api/src/: Api.c  Node.c
src/: Main.cpp
test/include/: BinaryIntNode.h  DoubleStack.h  Main.h  PostfixEvaluator.h  ReadLine.h  SinglyLinkedIntNode.h
test/src/: BinaryIntNode.c  DoubleStack.c  Main.c  PostfixEvaluator.c  ReadLine.c  SingleLinkedIntNode.c
